Fixed contact card spacing

--- a/NavPages/contact.css
+++ b/NavPages/contact.css
@@ -171,6 +171,7 @@ i {
   font-size: 1em;
   font-family: 'Ubuntu';
   margin-top: 10px;
+  margin-left: 2px;
 }
 
 .instagram, .facebook {
